<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_reg_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".demo.fragment.LoginRegPageFragment"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asking_login_details"
        android:textSize="28sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/light_grey"
        android:paddingStart="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:paddingStart="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/password"
        android:textSize="24sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="198dp"
            android:text="@string/forgot_password" />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/ButtonDarkBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:text="@string/login"
        android:textSize="20dp" />

</LinearLayout>
